* gui: #1510 implemented: hide description option also affects notifications (Vogel)
* plugins: #2825 implemented: plugin categories are now translated (Vogel)
* core: #2885 done: remove support for configuration files of Kadu 0.6.5 (Vogel)
* indicator_docking: #2682 done: support for new versions of Unity (Vogel)

+++ version 1.2
* gui: #2881 fixed: after some imported configuration no contacts are displayed at all (Vogel)
* windows: #2880 fixed: improve hiding Kadu button on taskbar (Vogel)
* gadu: #2857 fixed: users of old GG versions could not receive messages from Kadu (Vogel)

+++ version 1.1
* tabs: #2867 fixed: open in new window/tab works properly (Vogel)
* jabber: #2861 fixed: double messages removed (Vogel)
* gui: #2859 fixed: avatars do not show for e-mail only contacts (Vogel)
* gui: #2866 fixed: ungroupped tab visible when it should not (Vogel)
* gui: #2865 fixed: properly filter buddies at start (Vogel)
* gadu: #2864 fixed: receiving images works properly now (Vogel)

+++ version 1.0
* core: #2854 fixed: properly handle e-mail application (Vogel)

+++ version 1.0-rc10
* tabs: #2852 fixed: properly handle tabs disabled by default (Vogel)
* spellchecker: #2816 fixed: allow empty dictionary list (Vogel)
* windows: #2853 fixed: do not remove user themes manually installed in Program Files during installation (Vogel)

+++ version 1.0-rc9
* jabber: #2851 fixed: properly support special chars (Vogel)

+++ version 1.0-rc8
* themes: #2844 fixed: more formats of archives supported (Vogel)
* gui: #2845 fixed: change Help link into Forum link (Vogel)
* otr: #2846 fixed: unable to start otr session without keys directory (Vogel)

+++ version 1.0-rc7
* gui: #2839 fixed: properly set chat window title when no tabs plugin is loaded (Vogel)
* jabber: #2842 fixed: vcard support problems resolved (Vogel)
* jabber: #2843 fixed: avatar handling issues resolved (Vogel)

+++ version 1.0-rc6